fix logica ricerca (ora parola o id ricercato rimane visibile)

--- a/style.css
+++ b/style.css
@@ -8,10 +8,10 @@
 }
 
 body {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 main {
@@ -19,8 +19,8 @@ main {
   margin: 20px 50px;
   padding: 20px;
   max-width: 520px;
-  box-shadow: 10px 10px rgb(94, 25, 19);
-
+  border-radius: 10px;
+  box-shadow: 10px 10px 0 2px rgb(94, 25, 19);
 }
 
 .titolo-container {
@@ -37,20 +37,20 @@ h1 {
 }
 
 .inserisci {
-    font-size: 10px;
+  font-size: 10px;
 }
 
 .pulla {
-    padding: 10px;
-    border-radius: 25px;
-    box-shadow: 10px 5px #000;
-    cursor: pointer;
+  padding: 10px;
+  border-radius: 25px;
+  box-shadow: 10px 5px #000;
+  cursor: pointer;
 }
 
 #nomePokemon {
-    margin-right: 28px;
-    box-shadow: 10px 5px #000;
-    height: 30px;
+  margin-right: 28px;
+  box-shadow: 10px 5px #000;
+  height: 30px;
 }
 
 .sfondo-bianco {
@@ -75,7 +75,6 @@ h1 {
 .pokemon-card {
   margin: 20px;
   text-align: center;
-  
 }
 
 .pokemon-img {
@@ -117,17 +116,16 @@ h1 {
 }
 
 .contenitore-tastiera {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .tastiera-laterale {
   display: grid;
-  grid-template-columns: repeat(3,25px);
+  grid-template-columns: repeat(3, 25px);
   gap: 20px;
   text-align: center;
   justify-content: center;
@@ -142,7 +140,6 @@ h1 {
   align-items: center;
   /* padding: 30px 50px; */
   width: 150px;
-
 }
 
 .simboli {
@@ -168,15 +165,17 @@ h1 {
   margin: 20px 0;
 }
 
-#on, #off, #quit {
+#on,
+#off,
+#quit {
   cursor: pointer;
 }
 
 .btn-red {
-    color: #fff;
-    background-color: rgb(114, 17, 17);
-    padding: 5px 10px;
-    border-radius: 25px;
+  color: #fff;
+  background-color: rgb(114, 17, 17);
+  padding: 5px 10px;
+  border-radius: 25px;
 }
 
 .btn-tastiera {
@@ -207,40 +206,52 @@ h1 {
 }
 
 .btn-colonna {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    cursor: pointer;
+  height: 100px;
+  font-size: 12px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  cursor: pointer;
 }
 
+#primoSpan, #secondoSpan, .enter, .equal {
+  background-color: #85c230ff;
+  width: 60px;
+  height: 22px;
+  position: relative;
+  left: -50px;
+}
+
+
 .btn-clear {
-    background-color: yellow;
-    border-radius: 50px;
-    padding: 8px;
-    position: relative;
-    right: 110px;
-    top: 70px;
-    font-size: 14px;
-    cursor: pointer;
+  background-color: yellow;
+  border-radius: 50px;
+  padding: 8px;
+  position: relative;
+  right: 110px;
+  top: 0px;
+  font-size: 14px;
+  cursor: pointer;
 }
 
 .imgError {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .hidden {
-    display: none;
+  display: none;
 }
 
 .btn-remove {
-    width: 100%;
-    height: 80px;
-    border: 1px thin blue;
-    background-color: #fff;
-    font-size: 12px;
-    padding: 5px;
-    cursor: pointer;
+  width: 100%;
+  height: 80px;
+  border: 1px thin blue;
+  background-color: #fff;
+  font-size: 12px;
+  padding: 5px;
+  cursor: pointer;
 }
 
 .container-errore {
